--- a/alanlib_ita/lib_messaggi_libreria.asciidoc
+++ b/alanlib_ita/lib_messaggi_libreria.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Messaggi Libreria
 Tristano Ajmone <tajmone@gmail.com>
-v0.9.2-Alpha, 2018-11-22: Alan 3.0beta6
+v0.9.3-Alpha, 2018-11-23: Alan 3.0beta6
 =============================================================================
 Adattamento italiano degli attributi per la messaggistica dei verbi, estratti
 dal modulo `lib_definitions.i` della
@@ -60,22 +60,27 @@ spazio, sono state adottate una serie di abbreviazioni di uso comune:
 
 [horizontal]
 `ogg`  :: -> '`oggetto`' del verbo, inteso come _parametro_.
+`png`  :: -> '`personaggio non giocante,`' inteso come un'istanza _attore_.
 `prep` :: -> '`preposizione,`' in genere intesa come _preposizione articolata_.
 `qlco` :: -> '`qualcosa`'.
 
 Alcune abbreviazioni sono indicatrici di alcune caratteristiche tecniche del
 messaggio che rappresentano:
 
-* `ogg1` e `ogg2` indicano che il messaggio fa riferimento ad uno specifico
-  parametro del verbo utilizzando `$+1` o `$+2`, rispettivamente, nella
-  stringa dell'attributo. Es. `ogg2_non_posseduto`.
+* `ogg1` e `ogg2` indicano che la stringa del messaggio fa riferimento ad un
+  parametro specifico del verbo tramite il simbolo `$` (`$+1`/`$1` o `$+2`/`$2`,
+  rispettivamente). Es. `ogg2_non_posseduto`.
+
+* `png1` e `png2` indicano che il `$` nel messaggio fa rigerimento ad un
+   parametro che è un attore. Questo tipo di messaggio è adatto ad essere
+   utilizzato solo con attori. Es. `png1_non_apprezzerebbe`.
 
 * `_sg` e `_pl` rappresentano varianti di un medesimo messaggio, il primo
   da utilizzarsi con un referente singolare, il secondo con uno plurale.
   Es. `ogg1_inadatto_sg` e `ogg1_inadatto_pl`.
 
 * `_USA` è impiegato nei messaggi volti a indirizzare il giocatore all'uso
-  corretto di un verbo, solitamente associato a verbi creati appositamente
+  corretto di un comando. Solitamente associato a verbi creati appositamente
   per intercettare comandi incompleti. Es. `per_scrivere_USA`.
 
 // end::libmsg_convenzioni[]
