--- a/alanlib_ita/lib_messaggi_libreria.asciidoc
+++ b/alanlib_ita/lib_messaggi_libreria.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Messaggi Libreria
 Tristano Ajmone <tajmone@gmail.com>
-v0.9.7-Alpha, 2018-11-30: Alan 3.0beta6
+v0.9.8-Alpha, 2018-11-30: Alan 3.0beta6
 =============================================================================
 Adattamento italiano degli attributi per la messaggistica dei verbi, estratti
 dal modulo `lib_definitions.i` della
@@ -73,7 +73,8 @@ messaggio che rappresentano:
 
 * `png1` e `png2` indicano che il `$` nel messaggio fa rigerimento ad un
    parametro che è un attore. Questo tipo di messaggio è adatto ad essere
-   utilizzato solo con attori. Es. `png1_non_apprezzerebbe`.
+   utilizzato solo con attori.
+   Es. `png1_non_gradirebbe_sg` e `png1_non_gradirebbe_pl`.
 
 * `_sg` e `_pl` rappresentano varianti di un medesimo messaggio, il primo
   da utilizzarsi con un referente singolare, il secondo con uno plurale.
